# kaidsuka

asdf_example/: .gitignore  dub.json  dub.selections.json
camera_hls_streaming/: index.html  main.py
capstone2llvmir-example/: main.cpp
client-go-add-job/: go.mod  go.sum  kaniko.yaml  main.go
echo-oauth2-client/: README.md  go.mod  go.sum  main.go
etcd-cluster/: Vagrantfile  ansible.cfg  gen_client.sh  gen_leader.sh  make.sh
gensimtest/: Pipfile  classify.py  hoge.py  preproc.py  sadalearn.py
go-git-example/: go.mod  go.sum  main.go
go-redis-example/: docker-compose.yml  go.mod  go.sum  main.go
go-smtp-gmail/: .gitignore  go.mod  main.go
go-ws-chat/: go.sum  main.go
golyrics/: .gitignore  go.mod  go.sum  main.go
gotarupdate/: main.go
gowakati/: .gitignore  go.mod  go.sum  main.go
goword2vec/: .gitignore  go.mod  go.sum  main.go
kaniko-on-k8s/: README.md  deploy_just_login.yaml  just_login.yaml  kaniko.yaml  registry.yaml
lief-add-section-to-elf/python/: main.py  pyproject.toml
make_strand_example/: CMakeLists.txt  Makefile  main.cpp
mapjson/: .gitignore  dub.json  map1.json
monaco-example/: package.json
nohupgo/: .gitignore  go.mod  main.go
react-chat/: schema.graphql
registry-on-k8s/: README.md
responder_websocket_example/: main.py
responder_websocket_with_tick/: Pipfile  main.py
rsfzbz/: Cargo.toml
statikspa/: .gitignore  Makefile  go.mod  go.sum  main.go
strand_to_llvmir/: main.cpp
svelte-tutorial/: App.svelte  Nestes.svelte  index.html  index.js  package.json
swarm-cluster/: Vagrantfile  build-image.py  make.sh  (+3 more)
(+90 files in other folders)
