[tool.poetry]
name = "lief-add-section-to-elf"
version = "0.1.0"
description = ""
authors = ["theoremoon <theoldmoon0602@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lief = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
